fix .brand-right overflowing

--- a/styles/header.css
+++ b/styles/header.css
@@ -88,6 +88,7 @@ nav{
     display: flex;
     justify-content:left;
     align-items:left;
+    top: 30px;
     left: 80px;
     margin-bottom: 110px;
 }
